Fixed problem with vignette, prepared release

--- a/mpe/DESCRIPTION
+++ b/mpe/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mpe
 Version: 1.0
-Date: 2016-11-30
+Date: 2017-01-18
 Title: Multiple Primary Endpoints
 Authors@R: c(person("Matthias", "Kohl", role=c("aut", "cph")),
              person("Srinath", "Kolampally", role=c("cre", "aut", "cph"),
@@ -11,7 +11,8 @@ License: LGPL-3
 LazyData: TRUE
 Depends: R (>= 3.1.0), mvtnorm
 Imports: stats
-Suggests: rmarkdown
+Suggests: knitr, rmarkdown
+VignetteBuilder: knitr
 NeedsCompilation: no
 Packaged: 2016-11-30 11:59:56 UTC; kohlm
 Author: Matthias Kohl [aut, cph],
